--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +24,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid navbar__div">
-                    <div>
+                    <div class="d-flex align-items-center">
                         <img src="./images/camara.png" alt="camara" class="logotipo">
-                        <a class="navbar-brand" href="./index.html">MOMENTS4EVER</a>
+                        <a class="navbar-brand" href="./index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -62,13 +64,13 @@
                 <div class="backgroundOpaco__img container-fluid">
                     <div class="backgroundOpaco container-fluid d-flex align-items-center justify-content-center">
                         <div class="slogan">
-                            <h2>Momentos que duran en el tiempo.</h2>
+                            <h2 id="h2">Momentos que duran en el tiempo.</h2>
                         </div>
                     </div>
                 </div>
                 <div class="container-fluid row informacion justify-content-center">
                     <div class="col-lg tarjeta bg-light">
-                        <h3>FOTOGRAFIA PROFESIONAL</h3>
+                        <h3 id="h3">FOTOGRAFIA PROFESIONAL</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
                             aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
                             aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
