--- a/pages/que-hacemos.html
+++ b/pages/que-hacemos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +23,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid navbar__div">
-                    <div>
-                    <img src="../images/camara.png" alt="camara" class="logotipo">
-                    <a class="navbar-brand" href="../index.html">MOMENTS4EVER</a>
+                    <div class="d-flex align-items-center">
+                        <img src="../images/camara.png" alt="camara" class="logotipo">
+                        <a class="navbar-brand" href="./index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,7 +66,7 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
                     </div>
                     <div class="col-md col-lg-3">
-                        <img src="../images/bodas.jpg" alt="">
+                        <img src="../images/bodas.jpg" alt="Boda">
                     </div>
                 </div>
             </div>
@@ -75,7 +77,7 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
                     </div>
                     <div class="col-md col-lg-3">
-                        <img src="../images/books.jpg" alt="">
+                        <img src="../images/books.jpg" alt="Modelos-posando">
                     </div>
                 </div>
             </div>
@@ -86,7 +88,7 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
                     </div>
                     <div class="col-md col-lg-3">
-                        <img src="../images/xv.jpg" alt="">
+                        <img src="../images/xv.jpg" alt="Quinceaniera">
                     </div>
                 </div>
             </div>
