--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,10 +25,10 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid navbar__div">
-                    <div>
-                        <img src="../images/camara.png" alt="camara" class="logotipo">
-                        <a class="navbar-brand" href="../index.html">MOMENTS4EVER</a>
-                    </div>
+                  <div class="d-flex align-items-center">
+                    <img src="../images/camara.png" alt="camara" class="logotipo">
+                    <a class="navbar-brand" href="./index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
+                  </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -72,13 +74,13 @@
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../images/bodas3.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/bodas3.jpg" class="imgMuestra d-block w-100" alt="personas-casandose">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/bodas4.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/bodas4.jpg" class="imgMuestra d-block w-100" alt="personas-casandose">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/bodas5.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/bodas5.jpg" class="imgMuestra d-block w-100" alt="personas-casandose">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -106,13 +108,13 @@
                         <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../images/books1.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/books1.jpg" class="imgMuestra d-block w-100" alt="modelos-posando">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/books2.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/books2.jpg" class="imgMuestra d-block w-100" alt="modelos-posando">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/books3.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/books3.jpg" class="imgMuestra d-block w-100" alt="modelos-posando">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
@@ -140,13 +142,13 @@
                         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../images/xv1.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/xv1.jpg" class="imgMuestra d-block w-100" alt="quinceaniera">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/xv2.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/xv2.jpg" class="imgMuestra d-block w-100" alt="quinceaniera">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/xv3.jpg" class="imgMuestra d-block w-100" alt="...">
+                                <img src="../images/xv3.jpg" class="imgMuestra d-block w-100" alt="quinceaniera">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
