proyecto con SEO y arreglos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
-    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
+    <meta name="description" content="Si estas listo para que los lindos momentos se vuelvan eternos, te ofrecemos completar un formulario para ponerte en contacto rapidamente.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, contacto">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
