--- a/pages/que-hacemos.html
+++ b/pages/que-hacemos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
-    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
+    <meta name="description" content="Si necesitas asegurarte de que cubramos tu evento, te ofrecemos informacion detallada sobre todo lo que hacemos en nuestro estudio de fotografia.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
