--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
+    <meta name="description"
+        content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
     <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- tipografias -->
@@ -12,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- Linkeo BS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Linkeo mi CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Moments4Ever | Inicio</title>
@@ -26,7 +28,9 @@
                 <div class="container-fluid navbar__div">
                     <div class="d-flex align-items-center">
                         <img src="./images/camara.png" alt="camara" class="logotipo">
-                        <a class="navbar-brand" href="./index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
+                        <a class="navbar-brand" href="./index.html">
+                            <h1 class="navbar-brand">MOMENTS4EVER</h1>
+                        </a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -72,27 +76,27 @@
                     <div class="col-lg tarjeta bg-light">
                         <h3 id="h3">FOTOGRAFIA PROFESIONAL</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                            aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
-                            aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        aliquid harum inventore voluptatum aspernatur porro assumendasuntvoluptatibus dignissimos
+                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
                     </div>
                     <div class="col-lg tarjeta bg-light">
                         <h3>EQUIPO DE CALIDAD</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                            aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
-                            aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        aliquid harum inventore voluptatum aspernatur porro assumenda suntvoluptatibus dignissimos
+                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
                     </div>
                     <div class="col-lg tarjeta bg-light">
                         <h3>RESULTADOS CREATIVOS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                            aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
-                            aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
+                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
                     </div>
                 </div>
             </div>
         </main>
         <!-- COMIENZA EL FOOTER -->
         <footer>
-            <div class ="container-fluid row justify-content-around align-items-center footerDiv">
+            <div class="container-fluid row justify-content-around align-items-center footerDiv">
                 <div class="col-md d-flex flex-row footerDiv__item justify-content-center">
                     <h3>Seguinos en</h3>
                     <img class="socialicon" src="./images/twitter.png" alt="twitter-logo">
@@ -108,7 +112,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center copy">
-            <p>Todos los derechos reservados ©</p>
+                <p>Todos los derechos reservados ©</p>
             </div>
         </footer>
     </div>
