--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Lográ que los momentos lindos se vuelvan eternos con nuestro trabajo, pedi tu presupuesto.">
-    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos">
+    <meta name="description" content="Encontra toda la informacion necesaria sobre nuestro estudio de fotografia, una vez que estes listo solo tenes que ponerte en contacto.">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
