--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
         </header>
         <!-- COMIENZA EL MAIN -->
         <main>
-            <div class="container-fluid col-auto main justify-items-center">
+            <div class="container-fluid main">
                 <div class="backgroundOpaco__img container-fluid">
                     <div class="backgroundOpaco container-fluid d-flex align-items-center justify-content-center">
                         <div class="slogan">
-                            <h2 id="h2">Momentos que duran en el tiempo.</h2>
+                            <h2>Momentos que duran en el tiempo.</h2>
                         </div>
                     </div>
                 </div>
                 <div class="container-fluid row informacion justify-content-center">
                     <div class="col-lg tarjeta bg-light">
-                        <h3 id="h3">FOTOGRAFIA PROFESIONAL</h3>
+                        <h3>FOTOGRAFIA PROFESIONAL</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
                         aliquid harum inventore voluptatum aspernatur porro assumendasuntvoluptatibus dignissimos
                         aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
