--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
             </nav>
         </header>
         <!-- COMIENZA EL MAIN -->
-        <main>
+        <main class="mainContacto">
             <div class="container-md">
                 <div class="row justify-content-center informacion-gn">
                 <div class="col-sm-8">
