--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Encontra toda la informacion necesaria sobre nuestro estudio de fotografia, una vez que estes listo solo tenes que ponerte en contacto.">
-    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion">
+    <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion, el equipo, conocenos">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
