--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Encontra toda la informacion necesaria sobre nuestro estudio de fotografia, una vez que estes listo solo tenes que ponerte en contacto.">
     <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion, el equipo, conocenos">
+    <link rel="shortcut icon" href="../images/camara.png">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
