--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Servicios de fotografia profesional para eventos, fiestas, bodas o marcas. Por si existen dudas de la calidad de nuestros trabajos, te damos acceso a nuestro portfolio virtual.">
     <meta name="keywords" content="fotografia, estudio, fotografo, fiestas, eventos ,XV ,fotos,trabajos, ejemplos">
+    <link rel="shortcut icon" href="../images/camara.png">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Linkeo mi CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title>M4E | Contacto</title>
+    <title>M4E | Trabajos</title>
 </head>
 
 <body>
