--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Si estas listo para que los lindos momentos se vuelvan eternos, te ofrecemos completar un formulario para ponerte en contacto rapidamente.">
     <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, contacto">
+    <link rel="shortcut icon" href="../images/camara.png">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
