--- a/pages/que-hacemos.html
+++ b/pages/que-hacemos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Si necesitas asegurarte de que cubramos tu evento, te ofrecemos informacion detallada sobre todo lo que hacemos en nuestro estudio de fotografia.">
     <meta name="keywords" content="fotografia, estudio, fotografo,fiestas,eventos,XV,fotos, informacion">
+    <link rel="shortcut icon" href="../images/camara.png">
     <!-- tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
