--- a/index.html
+++ b/index.html
@@ -76,21 +76,15 @@
                 <div class="container-fluid row informacion justify-content-center">
                     <div class="col-lg tarjeta bg-light">
                         <h3>FOTOGRAFIA PROFESIONAL</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                        aliquid harum inventore voluptatum aspernatur porro assumendasuntvoluptatibus dignissimos
-                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        <p>Sabemos que uno de los aspectos mas importantes a la hora de contratar un fotografo es su profesionalidad. Por eso, desde Moments4Ever ofrecemos un grupo de trabajadores seleccionados especialmente para cumplir tus expectativas.</p>
                     </div>
                     <div class="col-lg tarjeta bg-light">
                         <h3>EQUIPO DE CALIDAD</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                        aliquid harum inventore voluptatum aspernatur porro assumenda suntvoluptatibus dignissimos
-                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        <p>Dicen que un fotografo no es nada sin un buen equipo, y la verdad es que no podemos estar mas de acuerdo. Es por eso que nunca escatimamos en gastos a la hora de brindar equipamiento, garantizando asi resultados de caldiad.</p>
                     </div>
                     <div class="col-lg tarjeta bg-light">
                         <h3>RESULTADOS CREATIVOS</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim odit velit necessitatibus
-                        aliquid harum inventore voluptatum aspernatur porro assumenda sunt voluptatibus dignissimos
-                        aut ex vero blanditiis, incidunt nostrum adipisci exercitationem?</p>
+                        <p>Nadie quiere que sus fotos se parezcan a las de alguien mas, hoy en dia todos queremos destacar por ser originales. Por eso, nuestros profesionales gozan de una increible creatividad lista para brindarte los mejores resultados.</p>
                     </div>
                 </div>
             </div>
