--- a/pages/que-hacemos.html
+++ b/pages/que-hacemos.html
@@ -64,7 +64,7 @@
                 <div class="row informacion-gn__items align-items-center">
                     <div class="col-md col-lg-9">
                         <h2>Bodas</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
+                        <p>El amor es uno de nuestros sentimientos favoritos, por eso nos encargamos de plasmarlo en las fotos mas lindas jamas vistas. Nuestros trabajos para bodas incluyen desde videos de la fiesta, hasta fotografias del civil. No te pierdas la oportunidad de hacer que el momento dure para siempre.</p>
                     </div>
                     <div class="col-md col-lg-3">
                         <img src="../images/bodas.jpg" alt="Boda">
@@ -75,7 +75,7 @@
                 <div class="row informacion-gn__items align-items-center">
                     <div class="col-md col-lg-9">
                         <h2>Books de Fotos</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
+                        <p>Los fotografos no solo sirven para eventos, es por eso que somos extremadamente dedicados a la hora de fotografiar modelos. Podemos abarcar desde marcas de ropa, hasta movimientos politicos. Manteniendo siempre el mismo nivel de profesionalismo.</p>
                     </div>
                     <div class="col-md col-lg-3">
                         <img src="../images/books.jpg" alt="Modelos-posando">
@@ -86,7 +86,7 @@
                 <div class="row informacion-gn__items align-items-center">
                     <div class="col-md col-lg-9">
                         <h2>Fiestas de Quince</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At ipsam ea, omnis rerum obcaecati neque asperiores, odit tempore itaque magni vitae accusantium, mollitia sint accusamus esse qui ipsa ipsum labore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, amet!</p>
+                        <p>Hay momentos que solo llegan una vez en la vida, y cumplir quince es uno de ellos! Por eso nos encargamos de hacer una produccion completa para tu fiesta, que incluya el backstage y tambien los momentos mas iconicos de la celebracion.</p>
                     </div>
                     <div class="col-md col-lg-3">
                         <img src="../images/xv.jpg" alt="Quinceaniera">
