--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -64,11 +64,11 @@
                 <div class="row">
                     <div class="col-md informacion-gn__items">
                         <h2>Quienes Somos</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nesciunt nostrum recusandae, vitae facilis quis consectetur non repudiandae esse animi expedita illo accusamus maiores voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsum modi, magni ut dignissimos sunt amet temporibus aliquid sequi laborum.</p>
+                        <p>Somos un estudio de fotografia ubicado en Palermo, Buenos aires. Contamos con un buen numero de profesionales listos para cumplir las expectativas del cliente, con la equipacion necesaria y la creativdad suficiente para que nunca falten ideas nuevas. Contamos con una larga trayectoria en el rubro y planeamos seguir sumando clientes felices.</p>
                     </div>
                     <div class="col-md informacion-gn__items">
                         <h2>Como Somos</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nesciunt nostrum recusandae, vitae facilis quis consectetur non repudiandae esse animi expedita illo accusamus maiores voluptatibus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga necessitatibus iusto laudantium vero nobis praesentium dolores accusamus magni officia itaque?</p>
+                        <p>Lo que mas destacamos sobre nosotros mismos es nuestro profesionalismo y la calidad de nuestro equipo. Esto se logra gracias a que seleccionamos nuestros trabajadores de forma minuciosa y les brindamos el mejor equipo para realizar su trabajo. Si a esto le sumamos una buena pizca de creatividad tenemos el combo perfecto.</p>
                     </div>
                     <div class="col-12 mapita">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13131.267603470695!2d-58.474462017524004!3d-34.63406706363717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc98765929d35%3A0x3a62f0e493d14305!2sFotogarcia!5e0!3m2!1ses-419!2sar!4v1643310259652!5m2!1ses-419!2sar" style="border:0; height: 400px;
