--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -66,10 +66,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h2>Boda de Fran y Martina</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto soluta eligendi, debitis
-                            explicabo nihil maxime eveniet reprehenderit eius blanditiis delectus quas sit. Reiciendis
-                            optio atque incidunt esse, hic doloremque inventore. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Illo iure vero obcaecati laudantium velit quidem.</p>
+                        <p>Sin duda fue uno de los eventos que mas disfrutamos, una boda maravillosa llena de momentos que ahora perduran en el tiempo gracias a nuestras fotos. El escenario de la playa hizo que las fotografias tomaran un estilo muy particular, y pareciera que todas ellas fueron tomadas en el momento justo ¡Que vivan los novios!</p>
                     </div>
                     <div class="col-lg-9">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -100,10 +97,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h2>Modelaje 47 Street</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto soluta eligendi, debitis
-                            explicabo nihil maxime eveniet reprehenderit eius blanditiis delectus quas sit. Reiciendis
-                            optio atque incidunt esse, hic doloremque inventore. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Illo iure vero obcaecati laudantium velit quidem.</p>
+                        <p>Trabajar con una marca de este calibre nunca es facil, pero estamos orgullosos de decir que nos encontramos a la altura. Presentar la nueva linea de ropa resulto una tarea sencilla, todo gracias a la predisposicion de las modelos y la creatividad del fotografo. No podemos esperar para repetir esta experiencia. </p>
                     </div>
                     <div class="col-lg-9">
                         <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
@@ -134,10 +128,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h2>XV de Nahiara</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto soluta eligendi, debitis
-                            explicabo nihil maxime eveniet reprehenderit eius blanditiis delectus quas sit. Reiciendis
-                            optio atque incidunt esse, hic doloremque inventore. Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Illo iure vero obcaecati laudantium velit quidem.</p>
+                        <p>Sin duda la fiesta fue hermosa, pero en esta ocasion preferimos compartir una sesion de fotos en el exterior. A veces darle una pizca de originalidad a las cosas tambien es importante, y no hay mejor forma de hacerlo que recorriendo algunos de los lugares mas iconicos de la ciudad.</p>
                     </div>
                     <div class="col-lg-9">
                         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
