--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -28,7 +28,7 @@
                 <div class="container-fluid navbar__div">
                   <div class="d-flex align-items-center">
                     <img src="../images/camara.png" alt="camara" class="logotipo">
-                    <a class="navbar-brand" href="./index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
+                    <a class="navbar-brand" href="../index.html"><h1 class="navbar-brand">MOMENTS4EVER</h1></a>
                   </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
